# myFM

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  codecov.yml  doc_autobuild.sh  mypy.ini  pyproject.toml  setup.py
.github/workflows/: doctest.yml  mypy-check.yml  pre-commit.yml  run-test.yml  wheels.yml
benchmark/: Dockerfile  requirements.txt  run_experiments_all.sh
benchmark/experiments/: movielens100k_data.py  run_ml100k_basic.py  run_svdpp.py
cpp_source/: Faddeeva.cc  bind.cpp  bind_float.cpp  declare_module.hpp
doc/source/: api_reference.rst  bfm.rst  conf.py  dependencies.rst  index.rst  movielens.rst  ordinal-regression.rst  quickstart.rst  relation-blocks.rst
examples/: mapper.py  ml-100k-extended.ipynb  ml-100k-regression.py  ml-100k-variational.py  ml-100k.ipynb  ml-10m-regression.py  ml-1m-extended.ipynb  ml-1m-regression.py  movielens100k_data.py  movielens100k_loader.py  movielens1M_data.py  oprobit_example.py  toy.py
include/Faddeeva/: Faddeeva.hh
include/myfm/: BaseFMTrainer.hpp  FM.hpp  FMLearningConfig.hpp  FMTrainer.hpp  HyperParams.hpp  LearningHistory.hpp  OProbitConfig.hpp  OProbitSampler.hpp  definitions.hpp  predictor.hpp  util.hpp  variational.hpp
includes/: FM.hpp  FMLearningConfig.hpp  FMTrainer.hpp  HyperParams.hpp  definitions.hpp  predictor.hpp  util.hpp
myfm/: __init__.py  _myfm.pyi  base.py  gibbs.py  variational.py  wrapper.py
myfm/utils/: dummy_data.py
src/: Faddeeva.cc  bind.cpp  bind_float.cpp  declare_module.hpp
src/myfm/: __init__.py  _myfm.pyi  base.py  gibbs.py  variational.py
tests/: Dockerfile  conftest.py  main.cpp  regressions.py  test_all.py  test_utils.py  util.py
tests/classification/: test_classification.py
tests/dataset/: test_ml100k.py  test_ml1m.py
tests/oprobit/: test_oprobit_1dim.py  test_sampler_minimization.py
(+34 files in other folders)
