[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "pybind11>=2.8.0",
  "requests",
  "setuptools_scm[toml]>=6.2",
]

build-backend = "setuptools.build_meta"

[tool.black]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["pybind11"]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pycln]
all = true
